# wasmer

./: Cargo.toml
lib/api/: Cargo.toml
lib/cli/src/commands/package/: build.rs
lib/cli/src/commands/run/: mod.rs
lib/rustposix/: Cargo.toml  mod.rs
lib/rustposix/src/: build.rs  lib.rs  main.rs
lib/wasix/: Cargo.toml
lib/wasix/src/: lib.rs
lib/wasix/src/bin_factory/: binary_package.rs
lib/wasix/src/runners/: wasi.rs
lib/wasix/src/syscalls/: mod.rs
lib/wasix/src/syscalls/lind_syscalls/: lind_syscall.rs  lind_write.rs  mod.rs
lib/wasix/src/syscalls/wasi/: fd_write.rs
